# docs/swagger.json
@@ -219,6 +219,36 @@
                 }
             }
         },
+        "/external/api/deploy": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Wordpress"
+                ],
+                "summary": "ワードプレスをデプロイします",
+                "parameters": [
+                    {
+                        "description": "デプロイ情報",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.DeployRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        },
         "/fetch": {
             "post": {
                 "description": "Fetch domain information from target",
@@ -681,6 +711,31 @@
                 }
             }
         },
+        "domain.Deploy": {
+            "type": "object",
+            "properties": {
+                "domain": {
+                    "type": "string"
+                },
+                "server_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.DeployRequest": {
+            "type": "object",
+            "properties": {
+                "dst": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.Deploy"
+                    }
+                },
+                "src": {
+                    "$ref": "#/definitions/domain.Deploy"
+                }
+            }
+        },
         "domain.Domain": {
             "type": "object",
             "properties": {
@@ -791,7 +846,8 @@
                 "check_view",
                 "check_japan",
                 "crawl_comp_info",
-                "done"
+                "done",
+                "trash"
             ],
             "x-enum-varnames": [
                 "StatusUnknown",
@@ -799,7 +855,8 @@
                 "StatusCheckView",
                 "StatusCheckJapan",
                 "StatusCrawlCompInfo",
-                "StatusDone"
+                "StatusDone",
+                "StatusTrash"
             ]
         },
         "domain.Target": {
